# rust-chatapi

./: .gitignore  Cargo.toml  sockets.md
src/: main.rs
src/helpers/: data_helpers.rs  mod.rs  response_helpers.rs  validation_helpers.rs
src/models/: models.rs
src/routes/: message_routes.rs  mod.rs  routes.rs  types.rs
src/sockets/: messages.rs  mod.rs  test_socket.rs
