[package]
name = "chatapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.1"
actix-web = "4"
actix-web-actors = "4.2.0"
chrono = "0.4.31"
diesel = { version = "2.1.0", features = ["postgres"] }
dotenvy = "0.15"
rand = "0.8.5"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
uuid = { version ="1.6.1", features = ["v4", "serde"] }
validator = { version = "0.16.1", features = ["derive"] }
zstd-safe = "7.0.0"
